Multires Modifier - No smooth shading and no rotation depth. #58307

Closed
opened 2018-11-30 14:38:39 +01:00 by Daniel Aubert · 25 comments

System Information
Operating system: Windows 10
Graphics card: NVidia Geforce 940mx

Blender Version
Broken: blender-2.80.0-git.26d5a3625ed-windows64
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
With Multires modifier in sculpt mode, the object only shows as flat shaded and the "auto depth" navigation function doesn't seem to work, so when you rotate the view it doesn't pivot from the point on the surface you click, but rather from the middle of the object.

Exact steps for others to reproduce the error
Create an object - add multires modifier - add at least one subdivision - be sure object is shaded smooth - enter sculpt mode - rotate the view (auto depth must be enabled in settings) - compare to the rotation outside sculpt mode.

It is a small thing. If this is not regarded as a bug, just let me know. I want to help as much as possible in the evolution of Blender 2.8 Beta

**System Information** Operating system: Windows 10 Graphics card: NVidia Geforce 940mx **Blender Version** Broken: blender-2.80.0-git.26d5a3625ed-windows64 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** With Multires modifier in sculpt mode, the object only shows as flat shaded and the "auto depth" navigation function doesn't seem to work, so when you rotate the view it doesn't pivot from the point on the surface you click, but rather from the middle of the object. **Exact steps for others to reproduce the error** Create an object - add multires modifier - add at least one subdivision - be sure object is shaded smooth - enter sculpt mode - rotate the view (auto depth must be enabled in settings) - compare to the rotation outside sculpt mode. It is a small thing. If this is not regarded as a bug, just let me know. I want to help as much as possible in the evolution of Blender 2.8 Beta
Author

Added subscriber: @Aubert

Added subscriber: @Aubert

#60423 was marked as duplicate of this issue

#60423 was marked as duplicate of this issue

#60100 was marked as duplicate of this issue

#60100 was marked as duplicate of this issue

Added subscriber: @achrystie

Added subscriber: @achrystie

I have a feeling that my bug is similar to this one. I'm on an Intel i3 2 core/ 4 thread, and have a GTX 750ti with the latest Nvidia drivers on Windows 10 64 bit. If I do the same procedure above, with just one multires level, the model disappears completely when rotating in sculpt mode.

I have a feeling that my bug is similar to this one. I'm on an Intel i3 2 core/ 4 thread, and have a GTX 750ti with the latest Nvidia drivers on Windows 10 64 bit. If I do the same procedure above, with just one multires level, the model disappears completely when rotating in sculpt mode.

Added subscriber: @capnm

Added subscriber: @capnm

with just one multires level, the model disappears completely when rotating in sculpt mode.

(Linux, git blender2.8 tip) It depends on the option "Number of subdivisions in sculpt mode".
For >1, it shows only one division during the view-port movement. The automatic depth positioning for the center point works only when sculpting the 'visible' subdiv #1 mesh points.

> with just one multires level, the model disappears completely when rotating in sculpt mode. (Linux, git blender2.8 tip) It depends on the option "Number of subdivisions in sculpt mode". For >1, it shows only one division during the view-port movement. The automatic depth positioning for the center point works only when sculpting the 'visible' subdiv #1 mesh points.

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

@brecht, I don't know who to assign this to.

@brecht, I don't know who to assign this to.
Sergey Sharybin was assigned by Brecht Van Lommel 2018-12-11 19:59:55 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This one is kind of random to assign, issues could be in different parts of the code. @Sergey, feel free to reassign.

This one is kind of random to assign, issues could be in different parts of the code. @Sergey, feel free to reassign.

Added subscriber: @ebarranco

Added subscriber: @ebarranco

Added subscriber: @knekke

Added subscriber: @knekke
Sergey Sharybin removed their assignment 2019-01-17 18:15:07 +01:00
Clément Foucault was assigned by Sergey Sharybin 2019-01-17 18:15:07 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

The smooth shading is more for @fclem, AFAIR he did majority of the new code.

Rotation depth i am not sure what's going on, @fclem, after fixing the smooth shading, feel free to re-assign back to me.

The smooth shading is more for @fclem, AFAIR he did majority of the new code. Rotation depth i am not sure what's going on, @fclem, after fixing the smooth shading, feel free to re-assign back to me.
Clément Foucault removed their assignment 2019-01-17 20:40:42 +01:00

For >1, it shows only one division during the view-port movement.

This is caused of the fast navigate option in the toolbar. This is not a bug.

@Sergey In GPU_pbvh_grid_buffers_update(), grid_flag_mats is currently NULL and leads to a Null pointer dereferencing. So I think it is not comming from the drawing code.

> For >1, it shows only one division during the view-port movement. This is caused of the fast navigate option in the toolbar. This is not a bug. @Sergey In `GPU_pbvh_grid_buffers_update()`, grid_flag_mats is currently NULL and leads to a Null pointer dereferencing. So I think it is not comming from the drawing code.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

@fclem:At least here, multires objects in Sculpt Mode are always drawn as flat shaded objects, regardless of Fast Navigate being on.

Screenshot 2019-01-17 at 20.48.47.png

@fclem:At least here, multires objects in Sculpt Mode are always drawn as flat shaded objects, regardless of Fast Navigate being on. ![Screenshot 2019-01-17 at 20.48.47.png](https://archive.blender.org/developer/F6320447/Screenshot_2019-01-17_at_20.48.47.png)
Sergey Sharybin self-assigned this 2019-01-17 20:58:24 +01:00

@fclem, ah, if it's matter of filling in a flags array it should be a simple task :)

@fclem, ah, if it's matter of filling in a flags array it should be a simple task :)

Shading is now fixed. The auto-depth i can't really see a difference between object and sculpt mode. Is it still an issue?

Shading is now fixed. The auto-depth i can't really see a difference between object and sculpt mode. Is it still an issue?

Hi Sergey Sharybin, smooth shading is working in multires modifier now but I have some new artifacts when I zoom/rotate and the mesh changes to lowres. I'm using hash: 779860d34e
[[ https://www.dropbox.com/s/jjwg01xs7as00kz/2019-02-23%2015-30-31.mkv?dl=0 |
Watch here the behavior. ]]

Hi Sergey Sharybin, smooth shading is working in multires modifier now but I have some new artifacts when I zoom/rotate and the mesh changes to lowres. I'm using hash: 779860d34e26 [[ https://www.dropbox.com/s/jjwg01xs7as00kz/2019-02-23%2015-30-31.mkv?dl=0 | Watch here the behavior. ]]

@ebarranco I fixed this already in 2f8d8b5e5e

@ebarranco I fixed this already in 2f8d8b5e5e4b

Great! @fclem Thanks.

Great! @fclem Thanks.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I'll mark this as resolved as I don't see any issue with auto depth either.

I'll mark this as resolved as I don't see any issue with auto depth either.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58307
No description provided.